--- a/.github/workflows/main_web-frontend.yml
+++ b/.github/workflows/main_web-frontend.yml
@@ -24,11 +24,10 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build --if-present      
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip dist/gestion-reclamo-frontend
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -67,5 +66,4 @@ jobs:
         with:
           app-name: 'web-frontend'
           slot-name: 'Production'
-          package: .
-          
+          package: dist/gestion-reclamo-frontend
